Fix spacing

--- a/css/e1c411f.css
+++ b/css/e1c411f.css
@@ -24,11 +24,13 @@ h2 {
 p {
   padding-left: 8px;
   padding-right: 8px;
+  line-height: 150%;
 }
 
 pre {
   margin-left: 8px;
   margin-right: 8px;
+  overflow-x: auto;
 }
 
 pre, code {
